# BriefBiz

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  cloudbuild.yaml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260317_0001_initial_schema.py  20260317_0002_add_why_it_matters.py  20260317_0003_phase7_article_metadata.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: articles.py  auth.py  companies.py  feed.py  health.py  notifications.py  search.py
backend/app/core/: config.py
backend/app/db/: base_imports.py  session.py
backend/app/models/: __init__.py  article.py  company.py  notification.py  social.py  user.py
backend/app/schemas/: articles.py  auth.py  companies.py  enrichment.py  feed.py  health.py  ingestion.py  notifications.py  search.py
backend/app/services/: article_classifier.py  auth.py  conflict_detection.py  elasticsearch.py  enrichment.py  ingestion.py  news_sources.py  notifications.py  openai_client.py  redis.py  search_index.py  serializers.py  share_cards.py  tts.py  weekly_digest.py
backend/app/templates/: weekly_digest.html
backend/app/utils/: content.py  hashing.py  slug.py
backend/app/workers/: __init__.py  celery_app.py  enrichment.py  pipeline.py  tasks.py
backend/tests/: conftest.py  test_article_routes.py  test_auth_routes.py  test_company_routes.py  test_feed_routes.py  test_notification_routes.py  test_search_routes.py
(+33 files in other folders)
